force-app/main/default/objects/Activity/fields/Area_terap_utica__c.field-meta.xml
<CustomField>
    <fullName>Area_terap_utica__c</fullName>
    <label>Area terapéutica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>