force-app/main/default/objects/Activity/fields/Canal_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Canal_Contacto__c</fullName>
    <label>Canal Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>