force-app/main/default/objects/Activity/fields/Canal_de_comunicaci_n_preferido__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_comunicaci_n_preferido__c</fullName>
    <label>Canal de comunicación preferido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Videollamada</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>