force-app/main/default/objects/Activity/fields/Carga_de_pedido_en_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Carga_de_pedido_en_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga de pedido en Oracle</label>
    <type>Checkbox</type>
</CustomField>