force-app/main/default/objects/Activity/fields/Confirmacion_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_de_paciente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación de paciente</label>
    <type>Checkbox</type>
</CustomField>