force-app/main/default/objects/Activity/fields/Contador_de_llamada_no_exitosa__c.field-meta.xml
<CustomField>
    <fullName>Contador_de_llamada_no_exitosa__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador de llamada no exitosa</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>