force-app/main/default/objects/Activity/fields/Contador_de_tareas__c.field-meta.xml
<CustomField>
    <fullName>Contador_de_tareas__c</fullName>
    <label>Contador de tareas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>