force-app/main/default/objects/Activity/fields/dde__c.field-meta.xml
<CustomField>
    <fullName>dde__c</fullName>
    <label>dde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>