force-app/main/default/objects/Activity/fields/Dias_abierto__c.field-meta.xml
<CustomField>
    <fullName>Dias_abierto__c</fullName>
    <label>Dias abierto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>