force-app/main/default/objects/Activity/fields/Dias_trabajando__c.field-meta.xml
<CustomField>
    <fullName>Dias_trabajando__c</fullName>
    <label>Dias trabajando</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>