force-app/main/default/objects/Activity/fields/Id_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Id_de_Paciente__c</fullName>
    <formula>Paciente__r.ID_de_paciente__c</formula>
    <label>Id de Paciente</label>
    <type>Text</type>
</CustomField>