force-app/main/default/objects/Activity/fields/Llamada__c.field-meta.xml
<CustomField>
    <fullName>Llamada__c</fullName>
    <label>Llamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exitosa</fullName>
            </value>
            <value>
                <fullName>No exitosa</fullName>
            </value>
            <value>
                <fullName>No realizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>