force-app/main/default/objects/Activity/fields/Llamada_efectiva__c.field-meta.xml
<CustomField>
    <fullName>Llamada_efectiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llamada efectiva</label>
    <type>Checkbox</type>
</CustomField>