force-app/main/default/objects/Activity/fields/M_dulo_reingresado__c.field-meta.xml
<CustomField>
    <fullName>M_dulo_reingresado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Módulo reingresado</label>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>