force-app/main/default/objects/Activity/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Internado</fullName>
            </value>
            <value>
                <fullName>Recuperado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>