force-app/main/default/objects/Activity/fields/NIC_Envio__c.field-meta.xml
<CustomField>
    <fullName>NIC_Envio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NIC Envío</label>
    <referenceTo>NIC_Envio__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>