force-app/main/default/objects/Activity/fields/Nombre_de_la_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_obra_social__c</fullName>
    <label>Nombre de la obra social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>