force-app/main/default/objects/Activity/fields/Nombre_y_Apellido_del_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_y_Apellido_del_Paciente__c</fullName>
    <label>Nombre y Apellido del Paciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>