force-app/main/default/objects/Activity/fields/Nro_de_factura_a_corregir__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_factura_a_corregir__c</fullName>
    <label>Nro. de factura a corregir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>