force-app/main/default/objects/Activity/fields/Nro_de_M_dulo_asociado_en_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_M_dulo_asociado_en_Salesforce__c</fullName>
    <label>Nro. de Módulo asociado en Salesforce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>