force-app/main/default/objects/Activity/fields/Nro_de_nota_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_nota_de_cr_dito__c</fullName>
    <label>Nro. de nota de crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>