force-app/main/default/objects/Activity/fields/Nro_de_nueva_factura__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_nueva_factura__c</fullName>
    <label>Nro. de nueva factura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>