force-app/main/default/objects/Activity/fields/Nro_de_pedido_asociado_en_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_pedido_asociado_en_Oracle__c</fullName>
    <label>Nro. de pedido asociado en Oracle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>