force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Llamada__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internado</fullName>
            </value>
            <value>
                <fullName>No desea/puede hablar</fullName>
            </value>
            <value>
                <fullName>No continuará con el tratamiento</fullName>
            </value>
            <value>
                <fullName>Imposibilidad de contacto</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Satisfecho con la respuesta</fullName>
            </value>
            <value>
                <fullName>No satisfecho con la respuesta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>