force-app/main/default/objects/Activity/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <label>Profesional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enfermero</fullName>
            </value>
            <value>
                <fullName>Nutricionista</fullName>
            </value>
            <value>
                <fullName>Médico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>