force-app/main/default/objects/Activity/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>DATEVALUE(CompletedDateTime) - ActivityDate -  Dias_trabajando__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>