force-app/main/default/objects/Activity/fields/Tipo_de_nota__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_nota__c</fullName>
    <label>Tipo de Nota</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Débito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>