force-app/main/default/objects/Activity/fields/Valor_asociado_ingresado__c.field-meta.xml
<CustomField>
    <fullName>Valor_asociado_ingresado__c</fullName>
    <label>Valor asociado – ingresado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>