force-app/main/default/objects/Activity/fields/Valor_de_nota_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_nota_de_cr_dito__c</fullName>
    <label>Valor de nota de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>