force-app/main/default/objects/Activity/fields/VisMed_PorcentajeAvance__c.field-meta.xml
<CustomField>
    <fullName>VisMed_PorcentajeAvance__c</fullName>
    <label>Porcentaje de avance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>