force-app/main/default/objects/Activity/listViews/Aviso_No_Cobertura.listView-meta.xml
<ListView>
    <fullName>Aviso_No_Cobertura</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
        <value>Aviso No Cobertura</value>
    </filters>
    <filters>
        <field>TASK.WHO_NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completa,Rechazada</value>
    </filters>
    <label>Aviso No Cobertura</label>
</ListView>