force-app/main/default/objects/Activity/listViews/Cola_Consumer.listView-meta.xml
<ListView>
    <fullName>Cola_Consumer</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Cola Consumer</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Abierta,Trabajando</value>
    </filters>
    <label>Cola Consumer</label>
    <sharedTo>
        <role>Operador_PSP</role>
        <role>Supervisor_PSP</role>
    </sharedTo>
</ListView>