force-app/main/default/objects/Activity/listViews/Enrich_Your_Nutrition.listView-meta.xml
<ListView>
    <fullName>Enrich_Your_Nutrition</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>Enrich Your</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Abierta,Trabajando</value>
    </filters>
    <label>Enrich Your Nutrition</label>
</ListView>