force-app/main/default/objects/Activity/listViews/Portal_Pacientes_Fallos.listView-meta.xml
<ListView>
    <fullName>Portal_Pacientes_Fallos</fullName>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>Error Formulario Kit de Inicio</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Abierta,Trabajando</value>
    </filters>
    <label>Portal Pacientes Registros Fallidos</label>
    <sharedTo>
        <group>PSP</group>
    </sharedTo>
</ListView>