force-app/main/default/objects/Activity/listViews/Tareas_HCPS.listView-meta.xml
<ListView>
    <fullName>Tareas_HCPS</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Abierta,Trabajando</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
        <value>coord,Laino,Fisque,ravo,mendez,silva</value>
    </filters>
    <label>Tareas HCPS</label>
</ListView>