force-app/main/default/objects/Activity/listViews/Tareas_Patient_Journey.listView-meta.xml
<ListView>
    <fullName>Tareas_Patient_Journey</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>Area_Terapeutica__c</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Llamado_de_seguimiento</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Abierta,Trabajando</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>Paciente no recibió el kit de inicio,Mala Experiencia con el Kit de Inicio</value>
    </filters>
    <filters>
        <field>Paciente__c</field>
        <operation>notContain</operation>
        <value>Test Joel</value>
    </filters>
    <label>Tareas Patient Journey</label>
</ListView>